--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,12 +7,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Flask App</title>
+    <!-- Tailwind CSS -->
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <title>Sitemap Detective</title>
   </head>
 
   <body>
     <header>
-      <h1>Flask App</h1>
+      <h1>Sitemap Detective</h1>
     </header>
 
     <main>
