--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -5,7 +5,12 @@
       Job Status: {{job_information.status}} Job Id: {{job_information.id}} File
       Name: {{job_information.input_file_name}} {% if
       job_information.output_file is not none %} Output File:
-      {{job_information.output_file_name}} {% endif %}
+      {{job_information.output_file_name}}
+      <a
+        href="{{ url_for('main.download_output_file', job_id=job_information.id) }}"
+        >Download Link</a
+      >
+      {% endif %}
 
       <h1>Customizations</h1>
       Pages:{{job_information.page_list}} Keywords:
