--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
     <title>Sitemap Detective</title>
   </head>
 
-  <body class="bg-slate-300">
+  <body class="bg-white">
     <!-- Logo Top Left -->
     <div class="absolute top-0 left-0 p-8">
       <a href="/">
