--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,31 +1,58 @@
 {% extends "base.html" %} {% block content %}
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+<script src="https://unpkg.com/create-file-list"></script>
+<script defer src="{{url_for('static', filename='helpers.js')}}"></script>
+
 <!-- Hero Header -->
 <div class="max-w-7xl mx-auto py-8">
   <!-- Left Side Text -->
   <div class="relative pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-3/5 lg:pb-28 xl:pb-32">    
-    <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+    <div class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
       <div class="text-left sm:text-center">
         <h1 class="text-3xl tracking-tight font-extrabold sm:text-4xl md:text-5xl">
           <span class="block xl:inline text-indigo-600"
           >Filter website leads</span>
-          <span class="block xl:inline text-gray-900"> on <span class="font-normal italic">/subpages</span> and </span>
-          <span class="block xl:inline text-gray-900"> <span class="font-normal">&lt; p &gt; content &lt; / p &gt;</span></span>
+          <span class="block xl:inline font-normal text-gray-900"> on <span class="font-extrabold italic">/subpages</span> and </span>
+          <span class="block xl:inline font-normal text-gray-900"> <span class="font-extrabold">&lt; p &gt; content &lt; / p &gt;</span></span>
         </h1>
       </div>
-    </main>
+    </div>
   </div>
 </div>
 <!-- Video Demo -->
 <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-2/5">
-  <!-- <iframe class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="https://www.loom.com/embed/87a580c1f87349a9befb6175a605883e" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>           -->
-  <img class="h-1/2 w-full object-cover sm:h-32 md:h-96 lg:w-full lg:h-full" src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
+  <!-- <iframe class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full" src="https://www.loom.com/embed/87a580c1f87349a9befb6175a605883e" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>           -->
+  <img class="h-1/2 w-full object-cover sm:h-32 md:h-96 lg:w-full" src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt="">
 </div>
 
 
 <!-- Rough Fake Form-->
-<div class="max-w-2xl mx-auto rounded-lg shadow-xl flex justify-center content-start">
-    <form action="#" method="POST">
+<div class="max-w-2xl mx-auto rounded-lg shadow-lg flex justify-center content-start">
+  <form action="#" method="POST">
+      <!-- Form container-->
       <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
+        <!-- File Upload -->
+        <div>
+          <label class="block text-sm font-medium text-gray-700"> CSV Upload </label>
+  
+
+          <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
+            <div class="space-y-1 text-center">
+              <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
+                <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+              <div class="flex text-sm text-gray-600">
+                <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
+                  <span>Upload a CSV file</span>
+                  <input id="file-upload" name="file-upload" type="file" class="sr-only">
+                </label>
+                <p class="pl-1">or drag and drop</p>
+              </div>
+              <p id="file-name" class="text-xs text-gray-500"></p>
+            </div>
+          </div>
+        </div>
+        
         <div class="grid grid-cols-3 gap-6">
           <div class="col-span-3 sm:col-span-2">
             <label for="company-website" class="block text-sm font-medium text-gray-700"> Website </label>
@@ -53,25 +80,6 @@
               </svg>
             </span>
             <button type="button" class="ml-5 bg-white py-2 px-3 border border-gray-300 rounded-md shadow-sm text-sm leading-4 font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Change</button>
-          </div>
-        </div>
-
-        <div>
-          <label class="block text-sm font-medium text-gray-700"> Cover photo </label>
-          <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
-            <div class="space-y-1 text-center">
-              <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48" aria-hidden="true">
-                <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-              </svg>
-              <div class="flex text-sm text-gray-600">
-                <label for="file-upload" class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
-                  <span>Upload a file</span>
-                  <input id="file-upload" name="file-upload" type="file" class="sr-only">
-                </label>
-                <p class="pl-1">or drag and drop</p>
-              </div>
-              <p class="text-xs text-gray-500">PNG, JPG, GIF up to 10MB</p>
-            </div>
           </div>
         </div>
 
