--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,14 +8,12 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <!-- Tailwind CSS -->
-    <link
-      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <title>Sitemap Detective</title>
   </head>
 
-  <body class="bg-slate-300">
+  <body class="bg-slate-100">
     <!-- Logo Top Left -->
     <div class="absolute top-0 left-0 p-8">
       <a href="/">
