--- a/app/templates/status.html
+++ b/app/templates/status.html
@@ -22,7 +22,7 @@
           <span> {{job_information.input_file_name}}</span>
         </div>
         <div class="flex flex-col space-y-1">
-          <span class="font-bold"> Sitemap Search Terms </span>
+          <span class="font-bold"> Page URL Search Terms </span>
           <span> {{job_information.page_list|join(', ')}}</span>
         </div>
         <div class="flex flex-col space-y-1">
