--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,9 +9,8 @@
       <div class="lg:text-left text-center">
         <h1 class="text-2xl tracking-tight font-extrabold sm:text-5xl md:text-6xl lg:text-6xl">
           <span class="block xl:inline text-indigo-600"
-          >Filter website leads</span>
-          <span class="block xl:inline font-normal text-gray-700"> on <span class="font-extrabold italic">/subpages</span> and </span>
-          <span class="block xl:inline font-normal text-gray-700"> <span class="font-extrabold">&lt; p &gt; content &lt; / p &gt;</span></span>
+          >Filter leads</span>          
+          <span class="block xl:inline font-extrabold text-gray-700"> based on website content</span>
         </h1>
       </div>
     </div>
@@ -59,7 +58,7 @@
           
           <div class="mt-1 space-y-6 sm:mb-4 md:flex-1 md:mr-4">             
             <div class="flex flex-col space-y-2">
-              <label class="block text-sm font-medium text-gray-700"> Sitemap Search Terms</label>
+              <label class="block text-sm font-medium text-gray-700"> Page URL Search Terms</label>
               {{ render_field(form.page_list, class="focus:ring-indigo-500 p-1 rounded-md sm:text-sm border border-gray-300", placeholder="careers, jobs, talent")}}
               
               <p class="text-xs text-gray-500">Enter a comma separated list of keywords to match with subpages.</p>
