how to gif added and homepage screenshot

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,8 +18,7 @@
 </div>
 <!-- Video Demo -->
 <div class="sm:w-3/5 sm:mx-auto sm:mb-14 lg:absolute lg:pr-10 lg:pt-10 lg:inset-y-0 lg:right-0 lg:w-2/5">
-  <iframe class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full" src="https://www.loom.com/embed/87a580c1f87349a9befb6175a605883e" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>          
-  <!-- <img class="h-1/2 w-full object-cover sm:h-32 md:h-96 lg:w-full" src="https://images.unsplash.com/photo-1551434678-e076c223a692?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80" alt=""> -->
+  <img class="h-1/2 w-full object-contain sm:h-32 md:h-96 lg:w-full" src="{{url_for('static', filename='example.gif')}}" alt="">
 </div>
 
 
